# rust_hackathon

./: README.md
esp-csi-tui-rs/: ARCHITECTURE.md  Cargo.toml  PROJECT_STATUS.md  QUICKSTART.md  README.md
esp-csi-tui-rs/src/: main.rs
esp-csi-tui-rs/src/commands/: mod.rs
esp-csi-tui-rs/src/device/: esp_client.rs  mod.rs  serial_handler.rs
esp-csi-tui-rs/src/models/: mod.rs
esp-csi-tui-rs/src/storage/: csv_storage.rs  mod.rs  rrd_storage.rs
esp-csi-tui-rs/src/streaming/: mod.rs  rerun_client.rs
esp-csi-tui-rs/src/ui/: app.rs  mod.rs  terminal.rs
esp-csi-tui-rs/src/ui/components/: layout.rs  mod.rs  plots.rs  status.rs
esp-csi-tui-rs/src/visualization/: charts.rs  mod.rs  renderer.rs
esp32-csi-firmware/: Cargo.toml  diagram.json  wokwi.toml
esp32-csi-firmware/.devcontainer/: devcontainer.json
esp32-csi-firmware/docs/: README.md
esp32-csi-firmware/scripts/: flash.sh
esp32-csi-firmware/src/: main.rs
old/: ESP32-C3_CSI_QUICK_START.md  ESP32-C3_CSI_REFERENCE.txt  ESP32-EASY-CONFIG.md  ESP32_Interactive_Shell.sh  HACKATHON_ROADMAP.md  START_HERE.md  TROUBLESHOOTING.md  esp-config.sh  (+1 more)
old/esp-csi-tui-rs/: ARCHITECTURE_DIAGRAMS.md  CODE_ANALYSIS_AND_ENHANCEMENTS.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  DAY1_STARTER_CODE.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_ISSUES.md  IMPLEMENTATION_GUIDE.md  MODULE_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_START.md  QUICK_WINS_IMPLEMENTATION.md  README_DOCUMENTATION.md  REFACTORING_COMPLETE.md  REVIEW_COMPLETE.md  RUN_GUIDE.md  csi_data_20251202_160837.csv  diagnose.sh  run-fast.sh  run.sh  test-connection.sh
old/esp-csi-tui-rs/src/: app.rs  config.rs  main.rs  main.rs.backup  models.rs
old/esp-csi-tui-rs/src/csi/: mod.rs  parser.rs  processor.rs
old/esp-csi-tui-rs/src/serial/: handler.rs  mod.rs
old/esp-csi-tui-rs/src/storage/: csv.rs
old/esp-csi-tui-rs/src/visualization/: mod.rs  plots.rs
(+3 files in other folders)
