[package]
name = "esp-csi-tui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Serial Communication
serialport = "4.3"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data Processing
regex = "1"
csv = "1.3"
ndarray = "0.15"

# Time
chrono = "0.4"

# Utilities
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
toml = "0.8"

